replace UserDto with record and add JavaDoc